--- a/public/styles/messages.css
+++ b/public/styles/messages.css
@@ -94,6 +94,14 @@
 .chat-person-img {
 	width: 60px;
 	height: 60px;
+	border-radius: 50%;
+	overflow: hidden;
+}
+
+.chat-person-img img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
 .chat-person-info {
