--- a/public/styles/messages.css
+++ b/public/styles/messages.css
@@ -52,6 +52,7 @@
 .messages-person-info {
 	display: flex;
 	align-items: center;
+	max-width: 90%;
 }
 
 .messages-person-img {
@@ -60,8 +61,8 @@
 }
 
 .messages-person-img img {
-	width: 100%;
-	height: 100%;
+	width: 100px;
+	height: 100px;
 	object-fit: cover;
 	border-radius: 50%;
 }
@@ -71,6 +72,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	overflow: hidden;
 }
 
 .messages-person-name {
@@ -79,7 +81,11 @@
 }
 
 .messages-person-message {
+	max-width: 100%;
 	color: #5a5a5a;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .messages-person-time {
